<resources>
    <string name="app_name">UEDControl</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="btnEntry">Acceder</string>
    <string name="btnProfile">Perfil</string>
    <string name="btnPatientList">Listado de pacientes</string>
    <string name="btnActivities">Actividades programadas</string>
    <string name="btnMenu">Menu</string>
    <string name="btnRecomendedActivities">Actividades recomendadas</string>
    <string name="btnChat">Chat</string>
    <string name="btnPreferences">Preferencias</string>
    <string name="btnClose">Cerrar sesión</string>
    <string name="edtName">Nombre</string>
    <string name="edtSurname">Apellidos</string>
    <string name="edtDni">DNI</string>
    <string name="txvContact">Persona(s) de contacto</string>
    <string name="btnAddContact">Añadir contacto</string>
    <string name="txvBd">Fecha de nacimiento</string>
    <string name="btnAccept">Aceptar</string>
    <string name="btnDatePicker">Selecciona fecha</string>
    <string name="edtDescription">Descripción</string>
    <string name="edtType">Tipo</string>
    <string name="txvSelectPat">Seleccione pacientes:</string>
    <string name="cbxSelectAll">Seleccionar todos</string>
    <string name="txvDetMenu">Primer plato \n - Crema de calabaza \n\nSegundo plato \n - Estofado de ternera</string>
    <string name="edtDescriptionMenu">Descripción del menú</string>
    <string name="txvSelPatien">Seleccione paciente</string>
    <string name="action_add_patient">Añadir</string>
    <string name="action_sort_patient">Ordenar</string>
    <string name="action_search_patient">Buscar</string>
    <string name="action_add">Añadir</string>
    <string name="txvDate">14/01/2017</string>

    <string-array name="sizes">
        <item>12pt</item>
        <item>13pt</item>
        <item>14pt</item>
        <item>15pt</item>
    </string-array>


    <string-array name="relationship">
        <item>Parentesco</item>
        <item>Cónyuge</item>
        <item>Hijo/a</item>
        <item>Padre</item>
        <item>Madre</item>
        <item>Otro/a</item>
        <item>No familiar</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="home">Lista de pacientes</string>
    <string name="titleActivities">Actividades</string>
    <string name="titleFood">Comidas</string>
    <string name="particularAct">Actividades recomendadas</string>
    <string name="chat">Conversaciones</string>
    <string name="settings">Configuración</string>

    <string name="drawer_open">Open navigation drawer</string>

    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patienProf">Perfil del paciente</string>
    <string name="addAct">Añadir actividad</string>
    <string name="addPat">Añadir Paciente</string>
    <string name="addContact">Añadir contacto</string>
    <string name="addMenu">Añadir menú</string>
    <string name="edtTitleMenu">Título del menú</string>
    <string name="stringActivity">Actividad :</string>
    <string name="txvDateActivity">Fecha de la actividad</string>

</resources>
