<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/action_home"
            android:icon="@drawable/uedcicon"
            android:title="@string/home"/>
        <item android:id="@+id/action_act"
            android:icon="@drawable/ic_activities"
            android:title="@string/titleActivities"/>
        <item android:id="@+id/action_food"
            android:icon="@drawable/ic_food"
            android:title="@string/titleFood"/>
        <item android:id="@+id/action_recAct"
            android:icon="@drawable/ic_activities"
            android:titleCondensed="Recomendaciones"
            android:title="@string/particularAct"/>
        <item android:id="@+id/action_chat"
            android:icon="@drawable/ic_conversation"
            android:title="@string/chat"/>
    </group>
    <item android:title="@string/settings">
        <menu>
            <group android:checkableBehavior="single">
            <item android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings"
                android:title="Ajustes"/>
            <item android:id="@+id/action_close"
                android:icon="@drawable/ic_close"
                android:title="@string/btnClose"/>
            </group>
        </menu>
    </item>
</menu>