<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:icon="@android:drawable/ic_search_category_default"
        android:id="@+id/action_search_patient"
        app:showAsAction="always"
        android:actionViewClass="android.widget.SearchView"
        android:title="@string/action_search_patient"/>

    <item android:icon="@android:drawable/ic_menu_add"
        android:id="@+id/action_add_patient"
        app:showAsAction="always"
        android:title="@string/action_add_patient"></item>

    <item android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:id="@+id/action_sort_alphabetically"
        app:showAsAction="always"
        android:title="@string/action_sort_patient"></item>

</menu>