<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_edit_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ismael.uedcontrol.AddEditActivity">


    <TextView
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txvDateActivity"
        android:textSize="16dp"
        android:id="@+id/txvDateActivity"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDatePicker"
        android:layout_below="@id/txvDateActivity"
        android:id="@+id/btnDateActivity" />

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tilDescription"
        android="@style/error"
        android:layout_below="@id/btnDateActivity"
        app:errorEnabled="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtDescription"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/edtDescription"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tilType"
        android="@style/error"
        android:layout_below="@id/tilDescription"
        app:errorEnabled="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtType"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/edtType"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txvSelectPat"
        android:layout_below="@id/tilType"
        android:id="@+id/txvSelectPat"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tilType"
        android:layout_alignBaseline="@id/txvSelectPat"
        android:id="@+id/cbxSelectAll"
        android:text="@string/cbxSelectAll"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@id/txvSelectPat"
        android:id="@+id/scList">


        <ListView
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:id="@+id/listPatient"/>
    </ScrollView>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAcceptActivity"
        android:layout_below="@id/scList"
        android:layout_centerHorizontal="true"
        android:text="@string/btnAccept"/>


</RelativeLayout>
</ScrollView>