<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_edit_patient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ismael.uedcontrol.AddEditPatient">

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/addImage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/addImage"
        android:id="@+id/tilName"
        android="@style/error"
        app:errorEnabled="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtName"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/edtName"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tilSurname"
        android="@style/error"
        android:layout_below="@id/tilName"
        app:errorEnabled="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtsurname"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/edtSurname"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tilDni"
        android="@style/error"
        android:layout_below="@id/tilSurname"
        app:errorEnabled="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtDni"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/edtDni"
            />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txvBd"
        android:textSize="16dp"
        android:layout_below="@id/tilDni"
        android:id="@+id/txvBd"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txvBd"
        android:text="@string/btnDatePicker"
        android:id="@+id/btnBirthdatePicker" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/txvContact"
        android:layout_below="@id/btnBirthdatePicker"
        android:id="@+id/txvContact"/>


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txvContact"
        android:id="@+id/listContact"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAddContact"
        android:layout_below="@id/listContact"
        android:id="@+id/btnAddContact"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAccept"
        android:layout_alignParentRight="true"
        android:layout_below="@id/listContact"
        android:id="@+id/btnAcceptPatient"/>



</RelativeLayout>
</ScrollView>
