<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_add_edit_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".fragments.AddEditActivitys"
        style="@style/AppThemeFragment">


        <TextView
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDatePicker"
            android:textSize="16dp"
            android:paddingLeft="6dp"
            style="@style/titleText"
            android:id="@+id/txvselectdateact"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:background="@mipmap/ic_calendar"
            android:layout_below="@id/txvselectdateact"
            android:id="@+id/btnDateActivity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvDate"
            android:paddingLeft="@dimen/margin"
            android:textSize="24sp"
            android:id="@+id/txvDateAct"
            android:layout_alignBaseline="@+id/btnDateActivity"
            android:layout_toRightOf="@+id/btnDateActivity"/>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/tilDescription"
            android="@style/error"
            android:layout_below="@id/btnDateActivity"
            app:errorEnabled="true">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtDescription"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:hint="@string/edtDescription"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/tilType"
            android="@style/error"
            android:layout_below="@id/tilDescription"
            app:errorEnabled="true">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtType"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:hint="@string/edtType"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvSelectPat"
            android:layout_below="@id/tilType"
            style="@style/titleText"
            android:id="@+id/txvSelectPat"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tilType"
            android:layout_alignBaseline="@id/txvSelectPat"
            android:id="@+id/cbxSelectAll"
            android:text="@string/cbxSelectAll"/>




            <ListView
                android:layout_width="match_parent"
                android:layout_below="@id/txvSelectPat"
                android:layout_marginTop="20dp"
                android:id="@+id/listPatient"
                android:layout_height="165dp"

            />
    <!---->


        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:id="@+id/btnAcceptActivity"
            android:background="@color/backColor"
            android:layout_below="@+id/listPatient"
            android:text="@string/btnAccept"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>