<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddEditFood"
    style="@style/AppThemeFragment">


    <Button
        android:id="@+id/btnDatePickerAdd"
        style="@style/calendarButtonStyle"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txvDate"
        android:paddingLeft="@dimen/margin"
        android:textSize="24sp"
        android:layout_toRightOf="@+id/btnDatePickerAdd"
        android:layout_alignBaseline="@+id/btnDatePickerAdd"
        android:id="@+id/txvDateFood"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tilTitleMenu"
        android:layout_below="@id/btnDatePickerAdd"
        android="@style/error"
        android:textColorHint="@color/black"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/edtTitleMenu"
            android:hint="@string/edtTitleMenu"

            android:maxLength="20"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tilDescriptionMenu"
        android:layout_below="@id/tilTitleMenu"
        android="@style/error"
        android:textColorHint="@color/black"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/edtDescriptionMenu"
            android:hint="@string/edtDescriptionMenu"

            android:maxLength="20"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/btnAccept"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnAcceptMenu"
        android:background="@color/backColor"
        />


</RelativeLayout>
