<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_edit_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ismael.uedcontrol.AddEditContact">

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/addImageContact"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />



    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/addImageContact"
        android:id="@+id/tilNameContact"
        android="@style/error"
        app:errorEnabled="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtNameContact"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/edtName"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tilSurnameContact"
        android="@style/error"
        android:layout_below="@id/tilNameContact"
        app:errorEnabled="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtsurnameContact"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/edtSurname"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tilDniContact"
        android="@style/error"
        android:layout_below="@id/tilSurnameContact"
        app:errorEnabled="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtDniContact"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/edtDni"
            />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/tilDniContact"
        android:entries="@array/relationship"
        android:id="@+id/spnRelationship" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAccept"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/spnRelationship"
        android:id="@+id/btnAcceptContact"/>

</RelativeLayout>
</ScrollView>